--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,12 @@
 .footer {
   display: flex;
   align-content: center;
-  gap: 20px;
+  padding: 0 20px;
+  justify-content: space-between;
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 20px;
+  margin-top: 20px;
 }
