--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -18,6 +18,7 @@
   height: 100%;
   border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  padding: 28px 28px;
 }
 .modal__close-button {
   position: absolute;
