--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -35,6 +35,8 @@
   display: flex;
   text-align: center;
   flex-direction: row;
+  align-items: center;
+  gap: 20px;
 }
 .navigation__user {
   padding-left: 12px;
@@ -42,12 +44,15 @@
   max-height: 40px;
 }
 .navigation__user_type_none {
-  padding-left: 12px;
-  width: 40px;
-  height: 40px;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
   border: 1px solid rgba(0, 0, 0, 0.5);
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2));
   border-radius: 50%;
   display: flex;
   text-align: center;
+  align-items: center;
+  justify-content: center;
+  box-sizing: content-box;
 }
