--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,7 +36,6 @@
   line-height: 1.2;
   display: flex;
   align-items: center;
-  padding: 5px 20px 5px 20px;
-  width: 100%;
   min-width: 160px;
+  width: 300px;
 }
