--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -12,8 +12,8 @@
 .modal__container {
   position: relative;
   background-color: white;
-  max-width: 496px;
-  max-height: 436px;
+  max-width: 440px;
+  max-height: 380px;
   width: 100%;
   height: 100%;
   border-radius: 20px;
@@ -39,28 +39,34 @@
   font-style: normal;
   font-weight: 700;
   line-height: 1.1;
-  margin-top: 28px;
-  margin-left: 28px;
-  margin: 28px 28px 0px 28px;
+  max-width: 440px;
+  margin: 0px;
+  padding-bottom: 20px;
 }
 .modal__form {
-  margin: 0 28px 0 28px;
+  margin: 0px;
+  max-width: 440px;
 }
 .modal__text-inputs {
   display: flex;
   flex-direction: column;
   padding-top: 24px;
-  gap: 24px;
 }
 .modal__label {
   display: flex;
-  flex-direction: column;
+  align-items: center;
   color: #000;
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
   line-height: 1.1;
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+.modal__error {
+  color: red;
+  margin-left: 10px;
 }
 .modal__input {
   color: rgba(0, 0, 0, 0.5);
@@ -72,6 +78,10 @@
   border-top: #000;
   border-left: #000;
   border-right: #000;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  width: 440px;
+  margin-bottom: 5px;
 }
 .modal__select-weather {
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
@@ -87,6 +97,7 @@
   height: 16px;
   width: 16px;
   color: rgba(0, 0, 0, 0.5);
+  padding-bottom: 10px;
 }
 .modal__radio-inputs {
   display: flex;
@@ -99,6 +110,9 @@
   line-height: 1.1;
   color: rgba(0, 0, 0, 0.5);
   accent-color: #000;
+}
+.modal__label_radio {
+  padding-bottom: 10px;
 }
 .modal__submit-button {
   margin-top: 34px;
