--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -5,10 +5,12 @@
 }
 .weather__info {
   position: absolute;
+  padding: 18px;
+  text-align: center;
   font-size: 36px;
-  top: 20px;
-  left: 16px;
+  line-height: 40px;
   color: white;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
 }
 .weather__image {
   width: 100%;
