--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,8 @@
 .footer {
   display: flex;
+  flex-wrap: wrap;
   align-content: center;
-  padding: 0 20px;
+  padding: 20px 20px 30px 20px;
   justify-content: space-between;
   font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
   font-size: 16px;
