--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -54,7 +54,7 @@
 }
 .modal__label {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   color: #000;
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
@@ -63,6 +63,9 @@
   line-height: 1.1;
   padding-bottom: 10px;
   padding-top: 10px;
+  flex-direction: column;
+  align-content: flex-start;
+  flex-wrap: wrap;
 }
 .modal__error {
   color: red;
