--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -4,13 +4,20 @@
   align-content: center;
 }
 .weather__info {
+  display: flex;
   position: absolute;
-  padding: 18px;
+  padding: 15px 18px 15px 18px;
   text-align: center;
+  align-items: center;
   font-size: 36px;
-  line-height: 40px;
+  line-height: 50%;
   color: white;
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 36px;
+  line-height: 40px;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: flex-start;
 }
 .weather__image {
   width: 100%;
