working on Toggle CSS

--- a/src/components/ToggleSwitch/ToggleSwitch.css
+++ b/src/components/ToggleSwitch/ToggleSwitch.css
@@ -1,6 +1,7 @@
 .switch {
   display: flex;
   position: relative;
+  padding: 0px;
 }
 .switch__box {
   border-radius: 25px;
@@ -11,8 +12,8 @@
 }
 .switch__slider {
   border-radius: 20px;
-  width: 56px;
   width: 28px;
+  height: 28px;
   background-color: black;
   color: white;
   text-align: center;
@@ -20,8 +21,26 @@
   position: absolute;
 }
 .switch__slider-F {
+  left: 6px;
+  top: 3px;
+  position: absolute;
 }
+
 .switch__slider-C {
+  top: 3px;
+  left: 30px;
+  position: absolute;
 }
 .switch__active {
+  color: white;
+}
+.switch__temp-F {
+  position: relative;
+  top: -13px;
+  left: -49px;
+}
+.switch__temp-C {
+  position: relative;
+  top: -13px;
+  left: -36px;
 }
