--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 24px;
+  padding-left: 0px;
 }
 .navigation__button {
   border: none;
