--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -37,10 +37,12 @@
   flex-direction: row;
   align-items: center;
   gap: 20px;
+  text-decoration: none;
 }
 .navigation__user {
   max-width: 40px;
   max-height: 40px;
+  text-decoration: none;
 }
 .navigation__user_type_none {
   padding: 10px;
