--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -39,6 +39,10 @@
   gap: 20px;
   text-decoration: none;
 }
+
+.header__username {
+  text-decoration: none;
+}
 .navigation__user {
   max-width: 40px;
   max-height: 40px;
