--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,13 +3,13 @@
   justify-content: space-between;
   align-content: center;
   min-height: 60px;
-  padding: 32px 20px 28px 20px;
+  padding: 32px 40px 28px 40px;
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
 }
 
 .header__container {
   display: flex;
-  align-content: center;
+  align-items: center;
   gap: 20px;
   flex-direction: row;
 }
