--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,4 @@
 @import url(../src/components/ClothesSection/ClothesSection.css);
 @import url(../src/components/Profile/Profile.css);
 @import url(../src/components/SideBar/SideBar.css);
+@import url(../src/components/ToggleSwitch/ToggleSwitch.css);
