--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -1,24 +1,22 @@
 .weather {
+  display: flex;
   position: relative;
-  height: 80px;
-  align-content: center;
+  align-items: center;
 }
 .weather__info {
   display: flex;
   position: absolute;
-  padding: 15px 18px 15px 18px;
-  text-align: center;
-  align-items: center;
-  font-size: 36px;
-  line-height: 50%;
-  color: white;
-  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  padding-left: 20px;
+
   font-size: 36px;
   line-height: 40px;
+  color: white;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   flex-wrap: wrap;
-  align-content: center;
+  align-items: center;
   justify-content: flex-start;
 }
 .weather__image {
   width: 100%;
+  height: 80px;
 }
