fixed preview modal

--- a/src/components/ItemCard/ItemCard.css
+++ b/src/components/ItemCard/ItemCard.css
@@ -1,5 +1,10 @@
 .card__element {
   position: relative;
+  display: flex;
+  justify-content: center;
+  width: 325px;
+  height: 328px;
+  border-radius: 20px;
 }
 .card__image {
   width: 323px;
@@ -8,7 +13,16 @@
   cursor: pointer;
 }
 .card__name {
-  position: absolute;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.6);
+  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 700;
+  line-height: 1.2;
+  font-style: normal;
+
+  /* position: absolute;
   top: 18px;
   right: 140px;
   margin: 0;
@@ -17,9 +31,30 @@
   border-radius: 4px;
   color: rgba(0, 0, 0, 0.6);
   background-color: #fff;
-  font-family: "CabinetGrotesk-Medium", Arial, sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.2;
+   */
+}
+.card__title-container {
+  display: flex;
+  position: absolute;
+  margin: 0;
+  top: 16px;
+  gap: 4px;
+  align-items: center;
+  padding: 2px 6px 2px 8px;
+  border-radius: 4px;
+  background: #fff;
+}
+
+.card__like-button {
+  width: 18px;
+  height: 15px;
+  cursor: pointer;
+}
+
+.card__like-button_hidden {
+  display: none;
+}
+
+.card__like-button:hover {
+  opacity: 0.6;
 }
