--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -1,4 +1,4 @@
-.form-modal {
+.modal-form {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -9,25 +9,23 @@
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
 }
-.form-modal__overlay {
+.modal-form__overlay {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
 }
-.form-modal__container {
+.modal-form__container {
   position: relative;
   background-color: white;
-  max-width: 440px;
-  max-height: 380px;
-  width: 100%;
-  height: 100%;
+  max-height: fit-content;
+  max-width: 490px;
   border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.3);
-  padding: 28px 28px;
+  padding: 2em;
 }
-.form-modal__close-button {
+.modal-form__close-button {
   position: absolute;
   top: 20px;
   right: 28px;
@@ -40,7 +38,7 @@
   border: none;
   cursor: pointer;
 }
-.form-modal__title {
+.modal-form__title {
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -48,18 +46,19 @@
   line-height: 1.1;
   max-width: 440px;
   margin: 0px;
-  padding-bottom: 20px;
+
+  color: #000;
 }
-.form-modal__form {
+.modal-form__form {
   margin: 0px;
   max-width: 440px;
 }
-.form-modal__text-inputs {
+.modal-form__text-inputs {
   display: flex;
   flex-direction: column;
   padding-top: 24px;
 }
-.form-modal__label {
+.modal-form__label {
   display: flex;
   align-items: flex-start;
   color: #000;
@@ -74,11 +73,11 @@
   align-content: flex-start;
   flex-wrap: wrap;
 }
-.form-modal__error {
+.modal-form__error {
   color: red;
   margin-left: 10px;
 }
-.form-modal__input {
+.modal-form__input {
   color: rgba(0, 0, 0, 0.5);
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
@@ -93,7 +92,7 @@
   width: 440px;
   margin-bottom: 5px;
 }
-.form-modal__select-weather {
+.modal-form__select-weather {
   font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -103,13 +102,13 @@
   margin-top: 0;
   margin-bottom: 17px;
 }
-.form-modal__radio-button {
+.modal-form__radio-button {
   height: 16px;
   width: 16px;
   color: rgba(0, 0, 0, 0.5);
   padding-bottom: 10px;
 }
-.form-modal__radio-inputs {
+.modal-form__radio-inputs {
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -121,11 +120,24 @@
   color: rgba(0, 0, 0, 0.5);
   accent-color: #000;
 }
-.form-modal__label_radio {
+.modal-form__label_radio {
   padding-bottom: 10px;
 }
-.form-modal__submit-button {
-  margin-top: 34px;
+
+.modal-form__submit-button:hover {
+  opacity: 0.6;
+}
+.modal-form__submit-button:disabled {
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: default;
+}
+.modal-form__button-wrapper {
+  display: flex;
+  gap: 12px;
+  padding-top: 30px;
+  align-items: center;
+}
+.modal-form__submit-button {
   width: 124px;
   height: 36px;
   color: #fff;
@@ -140,15 +152,9 @@
   padding: 0;
   cursor: pointer;
   transition: opacity 0.5s ease-in-out;
+  position: relative;
 }
-.form-modal__submit-button:hover {
-  opacity: 0.6;
-}
-.form-modal__submit-button:disabled {
-  background-color: rgba(0, 0, 0, 0.3);
-  cursor: default;
-}
-.form-modal__extra-button {
+.modal-form__extra-button {
   color: rgba(0, 0, 0, 0.5);
   font-size: 16px;
   font-family: "Cabinet Grotesk Bold", Arial, Helvetica, sans-serif;
