--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -45,6 +45,9 @@
   max-height: 40px;
   text-decoration: none;
 }
+.navigation__username {
+  text-decoration: none;
+}
 .navigation__user_type_none {
   padding: 10px;
   width: 20px;
@@ -57,4 +60,5 @@
   align-items: center;
   justify-content: center;
   box-sizing: content-box;
+  text-decoration: none;
 }
