--- a/src/components/Header/Navigation.css
+++ b/src/components/Header/Navigation.css
@@ -39,7 +39,10 @@
   gap: 20px;
   text-decoration: none;
 }
-
+.navigation__link a {
+  text-decoration: none;
+  color: inherit;
+}
 .navigation__user {
   max-width: 40px;
   max-height: 40px;
@@ -48,7 +51,7 @@
 .navigation__username {
   text-decoration: none;
 }
-.navigation__user_type_none {
+.navigation__user_initial {
   padding: 10px;
   width: 20px;
   height: 20px;
