--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -76,6 +76,10 @@
 .modal-form__error {
   color: red;
   margin-left: 10px;
+  font-family: "CabinetGrotesk-Bold", Arial, sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700;
 }
 .modal-form__input {
   color: rgba(0, 0, 0, 0.5);
@@ -83,7 +87,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
-  line-height: 1.1;
+  /* line-height: 1.1; */
   border-top: #000;
   border-left: #000;
   border-right: #000;
