--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -58,6 +58,11 @@
   flex-direction: column;
   padding-top: 24px;
 }
+.modal-form__label-container {
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+}
 .modal-form__label {
   display: flex;
   align-items: flex-start;
