--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -8,6 +8,7 @@
   top: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
 }
 .modal-form__overlay {
   position: absolute;
@@ -15,6 +16,7 @@
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 3;
 }
 .modal-form__container {
   position: relative;
@@ -24,6 +26,7 @@
   border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.3);
   padding: 2em;
+  z-index: 4;
 }
 .modal-form__close-button {
   position: absolute;
@@ -116,6 +119,7 @@
   width: 16px;
   color: rgba(0, 0, 0, 0.5);
   padding-bottom: 10px;
+  cursor: pointer;
 }
 .modal-form__radio-inputs {
   display: flex;
@@ -128,6 +132,7 @@
   line-height: 1.1;
   color: rgba(0, 0, 0, 0.5);
   accent-color: #000;
+  cursor: pointer;
 }
 .modal-form__label_radio {
   padding-bottom: 10px;
