--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -89,6 +89,7 @@
   font-size: 16px;
   font-style: normal;
   font-weight: 700;
+  max-width: 100%;
 }
 .modal-form__input {
   color: rgba(0, 0, 0, 0.5);
