--- a/src/components/ModalWithForm/ModalWithForm.css
+++ b/src/components/ModalWithForm/ModalWithForm.css
@@ -90,6 +90,7 @@
   font-style: normal;
   font-weight: 700;
   max-width: 100%;
+  word-wrap: break-word;
 }
 .modal-form__input {
   color: rgba(0, 0, 0, 0.5);
